--- a/website/src/Index.html
+++ b/website/src/Index.html
@@ -11,9 +11,6 @@
 </head>
 
 <body class="max-h-full">
-    <div>
-
-    </div>
     <div class="bg-inherit backgroud">
         <div class="container nav-bar">
             <nav>
@@ -133,6 +130,7 @@
                     service</button>
             </div>
         </div>
+
         <div class="mt-32 flex space-x-4 place-content-center gap-8 bg-gray-300 text-slate-700/50">
             <span>TRUST BY</span>
             <span>META</span>
@@ -147,84 +145,74 @@
             <h1 class="text-4xl">Popular Service</h1>
         </div>
         <!--Start Slide Show-->
-        <div class="responsive mt-5 px-20">
-            <div class="relative hover:opacity-80">
-                <small class="absolute text-white font-black left-1 top-1">Add talent AI</small>
-                </h4>
-                <h1 class="bg-slate-100/5 top-4 absolute text-white font-black left-1 truncate hover:truncate">AI
-                    artists
+        <div class="responsive mt-5 px-20 relative">
+            <div class="font-black hover:opacity-80">
+                <h2 class="text-shadow px-2">so 1</h2>
+                <h1 class="text-shadow px-2">
+                    AI artists
                 </h1>
                 <img src="image/CỐC CỐC.ico" alt="">
             </div>
-            <div class="relative hover:opacity-80">
-                <small class="absolute text-white font-black left-1 top-1">Add talent AI</small>
-                </h4>
-                <h1 class="bg-slate-100/5 top-4 absolute text-white font-black left-1 truncate hover:truncate">AI
-                    artists
+            <div class="font-black hover:opacity-80">
+                <h2 class="text-shadow px-2">so 2</h2>
+                <h1 class="text-shadow px-2">
+                    AI artists
                 </h1>
                 <img src="image/CỐC CỐC.ico" alt="">
             </div>
-            <div class="relative hover:opacity-80">
-                <small class="absolute text-white font-black left-1 top-1">Add talent AI</small>
-                </h4>
-                <h1 class="bg-slate-100/5 top-4 absolute text-white font-black left-1 truncate hover:truncate">AI
-                    artists
+            <div class="font-black hover:opacity-80">
+                <h2 class="text-shadow px-2">so 3</h2>
+                <h1 class="text-shadow px-2">
+                    AI artists
                 </h1>
                 <img src="image/CỐC CỐC.ico" alt="">
             </div>
-            <div class="relative hover:opacity-80">
-                <small class="absolute text-white font-black left-1 top-1">Add talent AI</small>
-                </h4>
-                <h1 class="bg-slate-100/5 top-4 absolute text-white font-black left-1 truncate hover:truncate">AI
-                    artists
+            <div class="font-black hover:opacity-80">
+                <h2 class="text-shadow px-2">so 4</h2>
+                <h1 class="text-shadow px-2">
+                    AI artists
                 </h1>
                 <img src="image/CỐC CỐC.ico" alt="">
             </div>
-            <div class="relative hover:opacity-80">
-                <small class="absolute text-white font-black left-1 top-1">Add talent AI</small>
-                </h4>
-                <h1 class="bg-slate-100/5 top-4 absolute text-white font-black left-1 truncate hover:truncate">AI
-                    artists
+            <div class="font-black hover:opacity-80">
+                <h2 class="text-shadow px-2">so 5</h2>
+                <h1 class="text-shadow px-2">
+                    AI artists
                 </h1>
                 <img src="image/CỐC CỐC.ico" alt="">
             </div>
-            <div class="relative hover:opacity-80">
-                <small class="absolute text-white font-black left-1 top-1">Add talent AI</small>
-                </h4>
-                <h1 class="bg-slate-100/5 top-4 absolute text-white font-black left-1 truncate hover:truncate">AI
-                    artists
+            <div class="font-black hover:opacity-80">
+                <h2 class="text-shadow px-2">so 6</h2>
+                <h1 class="text-shadow px-2">
+                    AI artists
                 </h1>
                 <img src="image/CỐC CỐC.ico" alt="">
             </div>
-            <div class="relative hover:opacity-80">
-                <small class="absolute text-white font-black left-1 top-1">Add talent AI</small>
-                </h4>
-                <h1 class="bg-slate-100/5 top-4 absolute text-white font-black left-1 truncate hover:truncate">AI
-                    artists
+            <div class="font-black hover:opacity-80">
+                <h2 class="text-shadow px-2">so 7</h2>
+                <h1 class="text-shadow px-2">
+                    AI artists
                 </h1>
                 <img src="image/CỐC CỐC.ico" alt="">
             </div>
-            <div class="relative hover:opacity-80">
-                <small class="absolute text-white font-black left-1 top-1">Add talent AI</small>
-                </h4>
-                <h1 class="bg-slate-100/5 top-4 absolute text-white font-black left-1 truncate hover:truncate">AI
-                    artists
+            <div class="font-black hover:opacity-80">
+                <h2 class="text-shadow px-2">so 8</h2>
+                <h1 class="text-shadow px-2">
+                    AI artists
                 </h1>
                 <img src="image/CỐC CỐC.ico" alt="">
             </div>
-            <div class="relative hover:opacity-80">
-                <small class="absolute text-white font-black left-1 top-1">Add talent AI</small>
-                </h4>
-                <h1 class="bg-slate-100/5 top-4 absolute text-white font-black left-1 truncate hover:truncate">AI
-                    artists
+            <div class="font-black hover:opacity-80">
+                <h2 class="text-shadow px-2">so 9</h2>
+                <h1 class="text-shadow px-2">
+                    AI artists
                 </h1>
                 <img src="image/CỐC CỐC.ico" alt="">
             </div>
-            <div class="relative hover:opacity-80">
-                <small class="absolute text-white font-black left-1 top-1">Add talent AI</small>
-                </h4>
-                <h1 class="bg-slate-100/5 top-4 absolute text-white font-black left-1 truncate hover:truncate">AI
-                    artists
+            <div class="font-black hover:opacity-80">
+                <h2 class="text-shadow px-2">so 10</h2>
+                <h1 class="text-shadow px-2">
+                    AI artists
                 </h1>
                 <img src="image/CỐC CỐC.ico" alt="">
             </div>
