--- a/website/src/Index.html
+++ b/website/src/Index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="max-h-full">
-    <div class="bg-inherit backgroud">
+    <div>
         <div class="container nav-bar">
             <nav>
                 <a class="pl-10 text-white px-5 py-5 text-center" href="image/CỐC CỐC.ico">Fiverr</a>
